--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--This is the question and answer section (section 2 and 3)-->
     <!--The program will run primarily here until the user goes through all the questions-->
 
-        <div id="quiz-questions" class="hidden quiz_questions">
+        <div id="quiz-questions" class="hide_middle quiz_questions">
             <div id="questions" class="questions">TEST</div>
             <div id="answers" class="answers"></div>
         </div>
@@ -56,7 +56,7 @@
         
     <!--This is the game over section (section 4)-->
     <!--This section will take you to the highschore.html page once submitted-->
-        <div id="end" class="hidden end">
+        <div id="end" class="hide_end end">
             <h1 id="game-over" class="game_over">Game Over!</h1>
             <p id="score" class="score">Your final score is: <span id="final-score" class="final_score">#</span></p>
             <p id="initials" class="initials">Enter Initials: <input type="text" id="name" max="3"/>
