--- a/highscore.html
+++ b/highscore.html
@@ -6,6 +6,9 @@
     <meta name="description" content="This is a quiz application for fundamental coding questions">
     <meta name="author" content="Aaron Sanchez">
     <meta name="keywords" content="quiz, html, css, javascript">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <!--This is for the CSS style sheet-->
     <link rel="stylesheet" href="style.css">
     <title>High Scores</title>
