--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="This is a quiz application for fundamental coding questions">
     <meta name="author" content="Aaron Sanchez">
     <meta name="keywords" content="quiz, html, css, javascript">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <!--This is for the CSS style sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Coding Quiz</title>
@@ -56,7 +59,7 @@
         
     <!--This is the game over section (section 4)-->
     <!--This section will take you to the highschore.html page once submitted-->
-        <div id="end" class="hide_end end">
+        <div id="end" class="hidden end">
             <h1 id="game-over" class="game_over">Game Over!</h1>
             <p id="score" class="score">Your final score is: <span id="final-score" class="final_score">#</span></p>
             <p id="initials" class="initials">Enter Initials: <input type="text" id="name" max="3"/>
