--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
     <!--The program will run primarily here until the user goes through all the questions-->
 
         <div id="quiz-questions" class="hide_middle quiz_questions">
-            <div id="questions" class="questions">TEST</div>
+            <div id="questions" class="questions"></div>
             <div id="answers" class="answers"></div>
         </div>
         
         
     <!--This is the game over section (section 4)-->
     <!--This section will take you to the highschore.html page once submitted-->
-        <div id="end" class="hidden end">
-            <h1 id="game-over" class="game_over">Game Over!</h1>
+        <div id="end" class="hide_end end">
+            <div id="title" class="title">
+                <h1>Game Over!</h1>
+            </div>           
             <p id="score" class="score">Your final score is: <span id="final-score" class="final_score">#</span></p>
             <p id="initials" class="initials">Enter Initials: <input type="text" id="name" max="3"/>
                 <button id="submit" class="submit"><a href="highscore.html">Submit</a></button>
