--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--This is the game over section (section 4)-->
     <!--This section will take you to the highschore.html page once submitted-->
         <div id="end" class="hide_end end">
-            <div id="title" class="title">
+            <div id="game_over" class="game_over">
                 <h1>Game Over!</h1>
             </div>           
             <p id="score" class="score">Your final score is: <span id="final-score" class="final_score">#</span></p>
