text input style/JS

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="description" content="This is a quiz application for fundamental coding questions">
     <meta name="author" content="Aaron Sanchez">
     <meta name="keywords" content="quiz, html, css, javascript">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
-    <!--This is for the CSS style sheet-->
     <link rel="stylesheet" href="style.css">
     <title>Coding Quiz</title>
 </head>
@@ -64,7 +63,7 @@
                 <h1>Game Over!</h1>
             </div>           
             <p id="score" class="score">Your final score is: <span id="final-score" class="final_score">#</span></p>
-            <p id="initials" class="initials">Enter Initials: <input type="text" id="name" max="3"/>
+            <p id="initials" class="initials"> <input type="text" placeholder="Enter Initials Here" id="name" max="3"/>
                 <button id="submit" class="submit"><a href="highscore.html">Submit</a></button>
             </p>
         </div>
