--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div id="instructions" class="instructions">
-                <p>Try to answer the following questions within the time limit! You will be able to enter your score at the end!</p>
+                <p>Try to answer the following questions within the time limit! You will be able to enter your initials at the end for the highscore leaderboard!</p>
             </div>
 
             <button id="start-quiz" class="start-quiz">
