--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div id="instructions" class="instructions">
-                <p>Try to answer the following questions within the time limit! You will be able to enter your initials at the end for the highscore leaderboard!</p>
+                <p>Try to answer the following questions within the time limit! You will be able to enter your initials at the end for the highscore leaderboard! The amount of time you have left will become your total points for the end of the quiz!</p>
             </div>
 
             <button id="start-quiz" class="start-quiz">
